--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
                 <version>3.0.0-M7</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                        <suiteXmlFile>testNG.xml</suiteXmlFile>
                     </suiteXmlFiles>
                     <parallel>methods</parallel>
                     <threadCount>3</threadCount>
