--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
     </dependencies>
 
     <build>
+        <sourceDirectory>src/test/java</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>net.serenity-bdd.maven.plugins</groupId>
